syntax = "proto3";
option java_package = "org.west2.clusterio.namenode.protocol";
option java_outer_classname = "NamenodeProtocol";

import "hdfs.proto";

message GetBlocksRequestProto{
  DatanodeIDProto datanode = 1;
  uint64 size = 2;
  uint64 minBlockSize = 3;
}

message GetBlocksResponseProto{
  BlockWithLocationProto blocks = 1;
}

service NamenodeService{
  rpc getBlocks(GetBlocksRequestProto) returns (GetBlocksResponseProto);
}